# mcp-youtube-video-summary

./: README.md  main.py  prompts.yaml  pyproject.toml
youtube_transcript/: __init__.py  cache.py  transcript.py
